initial setup, image, main about, cv updated, image name

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Taekseung Kim"
   pronouns         : # example: "she/her"  
   bio              : "Research interests: Parallel algorithms, Graph algorithms, query processing, Distrubuted computing"  # A short bio to be shown in the author profile section
